some major changes
